--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           java-version: '17'
           cache: maven
 
-      - name: Build and run tests with Maven
+      - name: run test
         run: mvn clean verify
 
       - name: SonarCloud Scan
@@ -34,35 +34,36 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
-      - name: Verify Node and npm
+      - name:  Node y npm
         run: |
           node -v
           npm -v
 
-      - name: Install Snyk CLI
+      - name: Snyk CLI
         run: npm install -g snyk
 
       - name: Authenticate Snyk CLI
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: snyk config set api=$SNYK_TOKEN
+        run: snyk auth $SNYK_TOKEN
 
-      - name: Ensure mvnw is executable
+      - name: mvnw
         run: chmod +x mvnw
 
       - name: Snyk test Java dependencies
+        continue-on-error: true
         run: |
-          echo "Ejecutando análisis de vulnerabilidades con Snyk..."
+          echo "🔍 Ejecutando análisis de vulnerabilidades con Snyk..."
           snyk test --file=pom.xml --package-manager=maven --severity-threshold=high
 
-      - name: Generate Snyk JSON Report
+      - name: Snyk JSON Report
         if: always()
         run: |
-          echo "Generando reporte JSON de Snyk..."
-          snyk test --file=pom.xml --package-manager=maven --json > snyk-report.json || echo "Falló Snyk test, pero se continúa"
+          echo "📄 Generando reporte JSON de Snyk..."
+          snyk test --file=pom.xml --package-manager=maven --json > snyk-report.json || echo "⚠️ Falló Snyk test, pero continuamos"
           ls -lh snyk-report.json || echo "No se generó el reporte"
 
-      - name: Upload Snyk JSON Report
+      - name:  Snyk JSON Report
         if: always()
         uses: actions/upload-artifact@v4
         with:
