--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,13 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.connection-timeout=30000
 
 server.port=8080
+
+# Actuator Configuration
+management.endpoints.web.exposure.include=health,info,prometheus,metrics
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# Métricas personalizadas
+management.metrics.tags.application=${spring.application.name}
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
